exports[`SidePanel should render docked menu 1`] = `
<nav
  className="undefined tc-side-panel">
  <button
    aria-hidden="true"
    className="btn btn-link"
    disabled={false}
    id={undefined}
    onClick={undefined}
    title="Toggle side panel"
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-arrow-left"
      title={null} />
  </button>
  <ul
    className="nav nav-pills nav-inverse nav-stacked tc-side-panel-list">
    <li
      className="tc-side-panel-list-item">
      <button
        className="btn btn-link"
        disabled={false}
        id={undefined}
        onClick={undefined}
        role="link"
        title="Display Preparations"
        type="button">
        <i
          aria-hidden="true"
          className="fa fa-asterisk"
          title={null} />
      </button>
    </li>
    <li
      className="tc-side-panel-list-item">
      <button
        className="btn btn-link"
        disabled={false}
        id={undefined}
        onClick={undefined}
        role="link"
        title="Display Datasets"
        type="button">
        <i
          aria-hidden="true"
          className="fa fa-file-excel-o"
          title={null} />
      </button>
    </li>
    <li
      className="tc-side-panel-list-item active">
      <button
        className="btn btn-link"
        disabled={false}
        id={undefined}
        onClick={undefined}
        role="link"
        title="Display Favorites"
        type="button">
        <i
          aria-hidden="true"
          className="fa fa-star"
          title={null} />
      </button>
    </li>
  </ul>
</nav>
`;

exports[`SidePanel should render expanded menu 1`] = `
<nav
  className="tc-side-panel">
  <button
    aria-hidden="true"
    className="btn btn-link"
    disabled={false}
    id={undefined}
    onClick={undefined}
    title="Toggle side panel"
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-arrow-left"
      title={null} />
  </button>
  <ul
    className="nav nav-pills nav-inverse nav-stacked tc-side-panel-list">
    <li
      className="tc-side-panel-list-item">
      <button
        className="btn btn-link"
        disabled={false}
        id={undefined}
        onClick={undefined}
        role="link"
        title="Display Preparations"
        type="button">
        <i
          aria-hidden="true"
          className="fa fa-asterisk"
          title={null} />
        <span>
          Preparations
        </span>
      </button>
    </li>
    <li
      className="tc-side-panel-list-item">
      <button
        className="btn btn-link"
        disabled={false}
        id={undefined}
        onClick={undefined}
        role="link"
        title="Display Datasets"
        type="button">
        <i
          aria-hidden="true"
          className="fa fa-file-excel-o"
          title={null} />
        <span>
          Datasets
        </span>
      </button>
    </li>
    <li
      className="tc-side-panel-list-item active">
      <button
        className="btn btn-link"
        disabled={false}
        id={undefined}
        onClick={undefined}
        role="link"
        title="Display Favorites"
        type="button">
        <i
          aria-hidden="true"
          className="fa fa-star"
          title={null} />
        <span>
          Favorites
        </span>
      </button>
    </li>
  </ul>
</nav>
`;

exports[`SidePanel should render id when props.id provided 1`] = `
<nav
  className="undefined tc-side-panel">
  <button
    aria-hidden="true"
    className="btn btn-link"
    disabled={false}
    id="context-toggle-dock"
    onClick={undefined}
    title="Toggle side panel"
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-arrow-left"
      title={null} />
  </button>
  <ul
    className="nav nav-pills nav-inverse nav-stacked tc-side-panel-list">
    <li
      className="tc-side-panel-list-item">
      <button
        className="btn btn-link"
        disabled={false}
        id="context-nav-preparations"
        onClick={undefined}
        role="link"
        title="Display Preparations"
        type="button">
        <i
          aria-hidden="true"
          className="fa fa-asterisk"
          title={null} />
      </button>
    </li>
    <li
      className="tc-side-panel-list-item">
      <button
        className="btn btn-link"
        disabled={false}
        id="context-nav-datasets"
        onClick={undefined}
        role="link"
        title="Display Datasets"
        type="button">
        <i
          aria-hidden="true"
          className="fa fa-file-excel-o"
          title={null} />
      </button>
    </li>
    <li
      className="tc-side-panel-list-item active">
      <button
        className="btn btn-link"
        disabled={false}
        id="context-nav-favorites"
        onClick={undefined}
        role="link"
        title="Display Favorites"
        type="button">
        <i
          aria-hidden="true"
          className="fa fa-star"
          title={null} />
      </button>
    </li>
  </ul>
</nav>
`;
